--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "react-router-dom": "^5.2.0",
+    "react-scroll-parallax": "^2.3.3",
     "yarn": "^1.22.4"
   }
 }
