--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-gravatar": "^2.6.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-scroll-parallax": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
