--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "axios": "^0.18.1",
     "react": "^16.8.3",
     "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.8.3",
     "react-google-font-loader": "^1.1.0",
     "react-gravatar": "^2.6.3",
+    "react-modal": "^3.11.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
