--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@githubprimer/octicons-react": "^8.5.0",
     "axios": "^0.18.1",
+    "chart.js": "^2.9.3",
     "react": "^16.8.3",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^3.0.0",
