--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scroll-parallax": "^2.3.3",
+    "react-ticker": "^1.2.2",
     "yarn": "^1.22.4"
   }
 }
