--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
+    "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scroll-parallax": "^2.3.3",
