--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
-    "react-scroll-parallax": "^2.3.3"
+    "react-scroll-parallax": "^2.3.3",
+    "react-ticker": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
