Started working on adding income table

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^2.9.3",
     "react-chartjs-2": "^2.9.0",
     "react-datepicker": "^3.0.0",
+    "react-page-visibility": "^6.2.0",
     "react-router-dom": "^5.2.0",
     "react-scroll-parallax": "^2.3.3",
     "react-ticker": "^1.2.2",
