--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-google-font-loader": "^1.1.0",
     "react-gravatar": "^2.6.3",
     "react-modal": "^3.11.2",
+    "react-page-visibility": "^6.2.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
