--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "react-google-font-loader": "^1.1.0",
     "react-gravatar": "^2.6.3",
     "react-modal": "^3.11.2",
+    "react-page-visibility": "^6.2.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.1",
-    "react-scroll-parallax": "^2.3.3"
+    "react-scroll-parallax": "^2.3.3",
+    "react-ticker": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
